--- a/docs/README
+++ b/docs/README
@@ -1,9 +1,9 @@
 	==================================
 	=== Open Monograph Press
 	=== The Public Knowledge Project
-	=== Version: 3.2.0-1
-	=== GIT tag: 3_2_0-1
-	=== Release date: March 20, 2020
+	=== Version: 3.3.0-0
+	=== GIT tag: 3_3_0-0
+	=== Release date: 
 	==================================
 
 About
