--- a/locale/en_US/locale.po
+++ b/locale/en_US/locale.po
@@ -968,6 +968,12 @@ msgstr "Identify reviewing interests (substantive areas and research methods):"
 msgid "user.register.form.userGroupRequired"
 msgstr "You must select at least one role"
 
+msgid "user.register.form.privacyConsentThisContext"
+msgstr "Yes, I agree to have my data collected and stored according to this press's <a href=\"{$privacyUrl}\" target=\"_blank\">privacy statement</a>."
+
+msgid "site.noPresses"
+msgstr "There are no presses available."
+
 msgid "site.pressView"
 msgstr "View Press Website"
 
