--- a/locale/en_US/editor.po
+++ b/locale/en_US/editor.po
@@ -163,3 +163,6 @@ msgstr "Any files that have already been uploaded to any submission stage can be
 
 msgid "editor.publicIdentificationExistsForTheSameType"
 msgstr "The public identifier '{$publicIdentifier}' already exists for another object of the same type. Please choose unique identifiers for the objects of the same type within your press."
+
+msgid "editor.submissions.assignedTo"
+msgstr "Assigned To Editor"
