--- a/locale/en_US/locale.po
+++ b/locale/en_US/locale.po
@@ -1067,11 +1067,14 @@ msgstr "More information about the publishing system, Platform and Workflow by O
 msgid "about.aboutThisPublishingSystem.altText"
 msgstr "OMP Editorial and Publishing Process"
 
+msgid "about.aboutSoftware"
+msgstr "About Open Monograph Press"
+
 msgid "about.aboutOMPPress"
-msgstr "This press uses Open Monograph Press {$ompVersion}, which is open source press management and publishing software developed, supported, and freely distributed by the <a href=\"http://pkp.sfu.ca/\">Public Knowledge Project</a> under the GNU General Public License."
+msgstr "This press uses Open Monograph Press {$ompVersion}, which is open source press management and publishing software developed, supported, and freely distributed by the Public Knowledge Project under the GNU General Public License. Visit PKP's website to <a href=\"http://pkp.sfu.ca/\">learn more about the software</a>. Please <a href=\"{$contactUrl}\">contact the press</a> directly with questions about the press and submissions to the press."
 
 msgid "about.aboutOMPSite"
-msgstr "This site uses Open Monograph Press {$ompVersion}, which is open source press management and publishing software developed, supported, and freely distributed by the <a href=\"http://pkp.sfu.ca/\">Public Knowledge Project</a> under the GNU General Public License."
+msgstr "This site uses Open Monograph Press {$ompVersion}, which is open source press management and publishing software developed, supported, and freely distributed by the Public Knowledge Project under the GNU General Public License. Visit PKP's website to <a href=\"http://pkp.sfu.ca/\">learn more about the software</a>. Please contact the site directly with questions about its presses and submissions to its presses."
 
 msgid "help.searchReturnResults"
 msgstr "Return to Search Results"
