--- a/docs/README
+++ b/docs/README
@@ -1,10 +1,12 @@
 	==================================
 	=== Open Monograph Press
 	=== The Public Knowledge Project
-	=== Version: 3.3.0-0
-	=== GIT tag: 3_3_0-0
-	=== Release date: 
+	=== Version: 3.3.0rc2
+	=== GIT tag: 3_3_0-1
+	=== Release date: December 7, 2020
 	==================================
+
+THIS IS A RELEASE CANDIDATE AND NOT INTENDED FOR PRODUCTION USE.
 
 About
 -----
